deploy: e41b5f27f756be52b5a09edaad0302a8fe59fc14

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:01.223039Z",
-     "iopub.status.busy": "2025-07-25T21:38:01.222871Z",
-     "iopub.status.idle": "2025-07-25T21:38:02.164977Z",
-     "shell.execute_reply": "2025-07-25T21:38:02.164348Z"
+     "iopub.execute_input": "2025-07-26T09:02:54.561564Z",
+     "iopub.status.busy": "2025-07-26T09:02:54.561400Z",
+     "iopub.status.idle": "2025-07-26T09:02:55.517928Z",
+     "shell.execute_reply": "2025-07-26T09:02:55.517306Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:02.166731Z",
-     "iopub.status.busy": "2025-07-25T21:38:02.166464Z",
-     "iopub.status.idle": "2025-07-25T21:38:02.474595Z",
-     "shell.execute_reply": "2025-07-25T21:38:02.473987Z"
+     "iopub.execute_input": "2025-07-26T09:02:55.519681Z",
+     "iopub.status.busy": "2025-07-26T09:02:55.519424Z",
+     "iopub.status.idle": "2025-07-26T09:02:55.829391Z",
+     "shell.execute_reply": "2025-07-26T09:02:55.828803Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:02.476202Z",
-     "iopub.status.busy": "2025-07-25T21:38:02.476039Z",
-     "iopub.status.idle": "2025-07-25T21:38:02.614378Z",
-     "shell.execute_reply": "2025-07-25T21:38:02.613771Z"
+     "iopub.execute_input": "2025-07-26T09:02:55.831047Z",
+     "iopub.status.busy": "2025-07-26T09:02:55.830871Z",
+     "iopub.status.idle": "2025-07-26T09:02:55.969362Z",
+     "shell.execute_reply": "2025-07-26T09:02:55.968875Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:02.616024Z",
-     "iopub.status.busy": "2025-07-25T21:38:02.615855Z",
-     "iopub.status.idle": "2025-07-25T21:38:03.006687Z",
-     "shell.execute_reply": "2025-07-25T21:38:03.006065Z"
+     "iopub.execute_input": "2025-07-26T09:02:55.971132Z",
+     "iopub.status.busy": "2025-07-26T09:02:55.970964Z",
+     "iopub.status.idle": "2025-07-26T09:02:56.373713Z",
+     "shell.execute_reply": "2025-07-26T09:02:56.373162Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:03.008480Z",
-     "iopub.status.busy": "2025-07-25T21:38:03.008304Z",
-     "iopub.status.idle": "2025-07-25T21:38:03.293870Z",
-     "shell.execute_reply": "2025-07-25T21:38:03.293259Z"
+     "iopub.execute_input": "2025-07-26T09:02:56.375357Z",
+     "iopub.status.busy": "2025-07-26T09:02:56.375199Z",
+     "iopub.status.idle": "2025-07-26T09:02:56.664700Z",
+     "shell.execute_reply": "2025-07-26T09:02:56.664120Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:03.295600Z",
-     "iopub.status.busy": "2025-07-25T21:38:03.295404Z",
-     "iopub.status.idle": "2025-07-25T21:38:03.298022Z",
-     "shell.execute_reply": "2025-07-25T21:38:03.297416Z"
+     "iopub.execute_input": "2025-07-26T09:02:56.666381Z",
+     "iopub.status.busy": "2025-07-26T09:02:56.666219Z",
+     "iopub.status.idle": "2025-07-26T09:02:56.668474Z",
+     "shell.execute_reply": "2025-07-26T09:02:56.668035Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:03.299484Z",
-     "iopub.status.busy": "2025-07-25T21:38:03.299322Z",
-     "iopub.status.idle": "2025-07-25T21:38:03.302219Z",
-     "shell.execute_reply": "2025-07-25T21:38:03.301658Z"
+     "iopub.execute_input": "2025-07-26T09:02:56.669917Z",
+     "iopub.status.busy": "2025-07-26T09:02:56.669767Z",
+     "iopub.status.idle": "2025-07-26T09:02:56.672256Z",
+     "shell.execute_reply": "2025-07-26T09:02:56.671820Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:03.303810Z",
-     "iopub.status.busy": "2025-07-25T21:38:03.303643Z",
-     "iopub.status.idle": "2025-07-25T21:38:04.548922Z",
-     "shell.execute_reply": "2025-07-25T21:38:04.548435Z"
+     "iopub.execute_input": "2025-07-26T09:02:56.673628Z",
+     "iopub.status.busy": "2025-07-26T09:02:56.673457Z",
+     "iopub.status.idle": "2025-07-26T09:02:57.760101Z",
+     "shell.execute_reply": "2025-07-26T09:02:57.759583Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpwEtayK\", R: \"/tmp/RtmpxZreq8\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpSLQkmv\", R: \"/tmp/RtmpCPnRqK\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:04.550775Z",
-     "iopub.status.busy": "2025-07-25T21:38:04.550599Z",
-     "iopub.status.idle": "2025-07-25T21:38:04.952491Z",
-     "shell.execute_reply": "2025-07-25T21:38:04.951972Z"
+     "iopub.execute_input": "2025-07-26T09:02:57.761932Z",
+     "iopub.status.busy": "2025-07-26T09:02:57.761772Z",
+     "iopub.status.idle": "2025-07-26T09:02:58.180237Z",
+     "shell.execute_reply": "2025-07-26T09:02:58.179562Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:04.954197Z",
-     "iopub.status.busy": "2025-07-25T21:38:04.954041Z",
-     "iopub.status.idle": "2025-07-25T21:38:05.268847Z",
-     "shell.execute_reply": "2025-07-25T21:38:05.268314Z"
+     "iopub.execute_input": "2025-07-26T09:02:58.181996Z",
+     "iopub.status.busy": "2025-07-26T09:02:58.181818Z",
+     "iopub.status.idle": "2025-07-26T09:02:58.501715Z",
+     "shell.execute_reply": "2025-07-26T09:02:58.501144Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:05.270406Z",
-     "iopub.status.busy": "2025-07-25T21:38:05.270249Z",
-     "iopub.status.idle": "2025-07-25T21:38:05.277528Z",
-     "shell.execute_reply": "2025-07-25T21:38:05.276952Z"
+     "iopub.execute_input": "2025-07-26T09:02:58.503287Z",
+     "iopub.status.busy": "2025-07-26T09:02:58.503116Z",
+     "iopub.status.idle": "2025-07-26T09:02:58.510311Z",
+     "shell.execute_reply": "2025-07-26T09:02:58.509870Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:05.279032Z",
-     "iopub.status.busy": "2025-07-25T21:38:05.278881Z",
-     "iopub.status.idle": "2025-07-25T21:38:05.688523Z",
-     "shell.execute_reply": "2025-07-25T21:38:05.688028Z"
+     "iopub.execute_input": "2025-07-26T09:02:58.511798Z",
+     "iopub.status.busy": "2025-07-26T09:02:58.511625Z",
+     "iopub.status.idle": "2025-07-26T09:02:58.929247Z",
+     "shell.execute_reply": "2025-07-26T09:02:58.928538Z"
     }
    },
    "outputs": [
