--- a/examples/example09_joss_paper.ipynb
+++ b/examples/example09_joss_paper.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:29.792450Z",
-     "iopub.status.busy": "2025-07-25T21:38:29.792284Z",
-     "iopub.status.idle": "2025-07-25T21:38:30.724083Z",
-     "shell.execute_reply": "2025-07-25T21:38:30.723442Z"
+     "iopub.execute_input": "2025-07-26T09:03:23.659147Z",
+     "iopub.status.busy": "2025-07-26T09:03:23.658978Z",
+     "iopub.status.idle": "2025-07-26T09:03:24.606726Z",
+     "shell.execute_reply": "2025-07-26T09:03:24.606123Z"
     }
    },
    "outputs": [],
@@ -146,10 +146,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:30.726117Z",
-     "iopub.status.busy": "2025-07-25T21:38:30.725880Z",
-     "iopub.status.idle": "2025-07-25T21:38:30.744131Z",
-     "shell.execute_reply": "2025-07-25T21:38:30.743685Z"
+     "iopub.execute_input": "2025-07-26T09:03:24.608767Z",
+     "iopub.status.busy": "2025-07-26T09:03:24.608480Z",
+     "iopub.status.idle": "2025-07-26T09:03:24.627659Z",
+     "shell.execute_reply": "2025-07-26T09:03:24.627062Z"
     }
    },
    "outputs": [],
@@ -174,10 +174,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:30.745753Z",
-     "iopub.status.busy": "2025-07-25T21:38:30.745566Z",
-     "iopub.status.idle": "2025-07-25T21:38:30.748011Z",
-     "shell.execute_reply": "2025-07-25T21:38:30.747560Z"
+     "iopub.execute_input": "2025-07-26T09:03:24.629409Z",
+     "iopub.status.busy": "2025-07-26T09:03:24.629246Z",
+     "iopub.status.idle": "2025-07-26T09:03:24.631952Z",
+     "shell.execute_reply": "2025-07-26T09:03:24.631406Z"
     }
    },
    "outputs": [],
@@ -192,10 +192,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:30.749453Z",
-     "iopub.status.busy": "2025-07-25T21:38:30.749304Z",
-     "iopub.status.idle": "2025-07-25T21:38:31.465078Z",
-     "shell.execute_reply": "2025-07-25T21:38:31.464545Z"
+     "iopub.execute_input": "2025-07-26T09:03:24.633452Z",
+     "iopub.status.busy": "2025-07-26T09:03:24.633295Z",
+     "iopub.status.idle": "2025-07-26T09:03:25.363270Z",
+     "shell.execute_reply": "2025-07-26T09:03:25.362753Z"
     }
    },
    "outputs": [
@@ -289,10 +289,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:31.466809Z",
-     "iopub.status.busy": "2025-07-25T21:38:31.466639Z",
-     "iopub.status.idle": "2025-07-25T21:38:32.075151Z",
-     "shell.execute_reply": "2025-07-25T21:38:32.074588Z"
+     "iopub.execute_input": "2025-07-26T09:03:25.364973Z",
+     "iopub.status.busy": "2025-07-26T09:03:25.364802Z",
+     "iopub.status.idle": "2025-07-26T09:03:25.968900Z",
+     "shell.execute_reply": "2025-07-26T09:03:25.968308Z"
     }
    },
    "outputs": [],
@@ -319,10 +319,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:32.077171Z",
-     "iopub.status.busy": "2025-07-25T21:38:32.077003Z",
-     "iopub.status.idle": "2025-07-25T21:38:32.456063Z",
-     "shell.execute_reply": "2025-07-25T21:38:32.455599Z"
+     "iopub.execute_input": "2025-07-26T09:03:25.970941Z",
+     "iopub.status.busy": "2025-07-26T09:03:25.970747Z",
+     "iopub.status.idle": "2025-07-26T09:03:26.363681Z",
+     "shell.execute_reply": "2025-07-26T09:03:26.363039Z"
     }
    },
    "outputs": [
@@ -453,10 +453,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:32.457768Z",
-     "iopub.status.busy": "2025-07-25T21:38:32.457500Z",
-     "iopub.status.idle": "2025-07-25T21:38:32.784203Z",
-     "shell.execute_reply": "2025-07-25T21:38:32.783656Z"
+     "iopub.execute_input": "2025-07-26T09:03:26.365439Z",
+     "iopub.status.busy": "2025-07-26T09:03:26.365262Z",
+     "iopub.status.idle": "2025-07-26T09:03:26.705127Z",
+     "shell.execute_reply": "2025-07-26T09:03:26.704588Z"
     }
    },
    "outputs": [
@@ -507,10 +507,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:32.785877Z",
-     "iopub.status.busy": "2025-07-25T21:38:32.785708Z",
-     "iopub.status.idle": "2025-07-25T21:38:36.875492Z",
-     "shell.execute_reply": "2025-07-25T21:38:36.874987Z"
+     "iopub.execute_input": "2025-07-26T09:03:26.706751Z",
+     "iopub.status.busy": "2025-07-26T09:03:26.706563Z",
+     "iopub.status.idle": "2025-07-26T09:03:30.870031Z",
+     "shell.execute_reply": "2025-07-26T09:03:30.869389Z"
     }
    },
    "outputs": [
@@ -567,17 +567,17 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T21:38:36.877159Z",
-     "iopub.status.busy": "2025-07-25T21:38:36.876997Z",
-     "iopub.status.idle": "2025-07-25T21:38:37.335895Z",
-     "shell.execute_reply": "2025-07-25T21:38:37.335379Z"
+     "iopub.execute_input": "2025-07-26T09:03:30.871756Z",
+     "iopub.status.busy": "2025-07-26T09:03:30.871567Z",
+     "iopub.status.idle": "2025-07-26T09:03:31.341249Z",
+     "shell.execute_reply": "2025-07-26T09:03:31.340642Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2333c5e8d0>"
+       "<matplotlib.legend.Legend at 0x7fccd40b25d0>"
       ]
      },
      "execution_count": 9,
