deploy: 388ce775ddf6e546fa88bbd863e3522a979c3faa

--- a/examples/example09_joss_paper.ipynb
+++ b/examples/example09_joss_paper.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:23.659147Z",
-     "iopub.status.busy": "2025-07-26T09:03:23.658978Z",
-     "iopub.status.idle": "2025-07-26T09:03:24.606726Z",
-     "shell.execute_reply": "2025-07-26T09:03:24.606123Z"
+     "iopub.execute_input": "2025-07-29T09:18:03.180095Z",
+     "iopub.status.busy": "2025-07-29T09:18:03.179938Z",
+     "iopub.status.idle": "2025-07-29T09:18:04.140555Z",
+     "shell.execute_reply": "2025-07-29T09:18:04.139889Z"
     }
    },
    "outputs": [],
@@ -146,10 +146,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:24.608767Z",
-     "iopub.status.busy": "2025-07-26T09:03:24.608480Z",
-     "iopub.status.idle": "2025-07-26T09:03:24.627659Z",
-     "shell.execute_reply": "2025-07-26T09:03:24.627062Z"
+     "iopub.execute_input": "2025-07-29T09:18:04.142620Z",
+     "iopub.status.busy": "2025-07-29T09:18:04.142358Z",
+     "iopub.status.idle": "2025-07-29T09:18:04.160953Z",
+     "shell.execute_reply": "2025-07-29T09:18:04.160398Z"
     }
    },
    "outputs": [],
@@ -174,10 +174,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:24.629409Z",
-     "iopub.status.busy": "2025-07-26T09:03:24.629246Z",
-     "iopub.status.idle": "2025-07-26T09:03:24.631952Z",
-     "shell.execute_reply": "2025-07-26T09:03:24.631406Z"
+     "iopub.execute_input": "2025-07-29T09:18:04.162623Z",
+     "iopub.status.busy": "2025-07-29T09:18:04.162466Z",
+     "iopub.status.idle": "2025-07-29T09:18:04.165088Z",
+     "shell.execute_reply": "2025-07-29T09:18:04.164531Z"
     }
    },
    "outputs": [],
@@ -192,10 +192,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:24.633452Z",
-     "iopub.status.busy": "2025-07-26T09:03:24.633295Z",
-     "iopub.status.idle": "2025-07-26T09:03:25.363270Z",
-     "shell.execute_reply": "2025-07-26T09:03:25.362753Z"
+     "iopub.execute_input": "2025-07-29T09:18:04.166573Z",
+     "iopub.status.busy": "2025-07-29T09:18:04.166423Z",
+     "iopub.status.idle": "2025-07-29T09:18:04.877159Z",
+     "shell.execute_reply": "2025-07-29T09:18:04.876536Z"
     }
    },
    "outputs": [
@@ -289,10 +289,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:25.364973Z",
-     "iopub.status.busy": "2025-07-26T09:03:25.364802Z",
-     "iopub.status.idle": "2025-07-26T09:03:25.968900Z",
-     "shell.execute_reply": "2025-07-26T09:03:25.968308Z"
+     "iopub.execute_input": "2025-07-29T09:18:04.878897Z",
+     "iopub.status.busy": "2025-07-29T09:18:04.878720Z",
+     "iopub.status.idle": "2025-07-29T09:18:05.532467Z",
+     "shell.execute_reply": "2025-07-29T09:18:05.531916Z"
     }
    },
    "outputs": [],
@@ -319,10 +319,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:25.970941Z",
-     "iopub.status.busy": "2025-07-26T09:03:25.970747Z",
-     "iopub.status.idle": "2025-07-26T09:03:26.363681Z",
-     "shell.execute_reply": "2025-07-26T09:03:26.363039Z"
+     "iopub.execute_input": "2025-07-29T09:18:05.534418Z",
+     "iopub.status.busy": "2025-07-29T09:18:05.534235Z",
+     "iopub.status.idle": "2025-07-29T09:18:05.922393Z",
+     "shell.execute_reply": "2025-07-29T09:18:05.921821Z"
     }
    },
    "outputs": [
@@ -453,10 +453,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:26.365439Z",
-     "iopub.status.busy": "2025-07-26T09:03:26.365262Z",
-     "iopub.status.idle": "2025-07-26T09:03:26.705127Z",
-     "shell.execute_reply": "2025-07-26T09:03:26.704588Z"
+     "iopub.execute_input": "2025-07-29T09:18:05.924074Z",
+     "iopub.status.busy": "2025-07-29T09:18:05.923905Z",
+     "iopub.status.idle": "2025-07-29T09:18:06.258315Z",
+     "shell.execute_reply": "2025-07-29T09:18:06.257789Z"
     }
    },
    "outputs": [
@@ -507,10 +507,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:26.706751Z",
-     "iopub.status.busy": "2025-07-26T09:03:26.706563Z",
-     "iopub.status.idle": "2025-07-26T09:03:30.870031Z",
-     "shell.execute_reply": "2025-07-26T09:03:30.869389Z"
+     "iopub.execute_input": "2025-07-29T09:18:06.260003Z",
+     "iopub.status.busy": "2025-07-29T09:18:06.259832Z",
+     "iopub.status.idle": "2025-07-29T09:18:10.443701Z",
+     "shell.execute_reply": "2025-07-29T09:18:10.443204Z"
     }
    },
    "outputs": [
@@ -567,17 +567,17 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:03:30.871756Z",
-     "iopub.status.busy": "2025-07-26T09:03:30.871567Z",
-     "iopub.status.idle": "2025-07-26T09:03:31.341249Z",
-     "shell.execute_reply": "2025-07-26T09:03:31.340642Z"
+     "iopub.execute_input": "2025-07-29T09:18:10.445340Z",
+     "iopub.status.busy": "2025-07-29T09:18:10.445180Z",
+     "iopub.status.idle": "2025-07-29T09:18:10.907408Z",
+     "shell.execute_reply": "2025-07-29T09:18:10.906928Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fccd40b25d0>"
+       "<matplotlib.legend.Legend at 0x7f169dfd54d0>"
       ]
      },
      "execution_count": 9,
