--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:54.561564Z",
-     "iopub.status.busy": "2025-07-26T09:02:54.561400Z",
-     "iopub.status.idle": "2025-07-26T09:02:55.517928Z",
-     "shell.execute_reply": "2025-07-26T09:02:55.517306Z"
+     "iopub.execute_input": "2025-07-29T09:17:34.481170Z",
+     "iopub.status.busy": "2025-07-29T09:17:34.480943Z",
+     "iopub.status.idle": "2025-07-29T09:17:35.416122Z",
+     "shell.execute_reply": "2025-07-29T09:17:35.415627Z"
     }
    },
    "outputs": [
@@ -43,7 +43,7 @@
       "python: 3.11.13\n",
       "spei: 0.8.0\n",
       "numpy: 2.2.6\n",
-      "scipy: 1.16.0\n",
+      "scipy: 1.16.1\n",
       "matplotlib: 3.10.3\n",
       "pandas: 2.3.1\n"
      ]
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:55.519681Z",
-     "iopub.status.busy": "2025-07-26T09:02:55.519424Z",
-     "iopub.status.idle": "2025-07-26T09:02:55.829391Z",
-     "shell.execute_reply": "2025-07-26T09:02:55.828803Z"
+     "iopub.execute_input": "2025-07-29T09:17:35.417868Z",
+     "iopub.status.busy": "2025-07-29T09:17:35.417640Z",
+     "iopub.status.idle": "2025-07-29T09:17:35.725985Z",
+     "shell.execute_reply": "2025-07-29T09:17:35.725405Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:55.831047Z",
-     "iopub.status.busy": "2025-07-26T09:02:55.830871Z",
-     "iopub.status.idle": "2025-07-26T09:02:55.969362Z",
-     "shell.execute_reply": "2025-07-26T09:02:55.968875Z"
+     "iopub.execute_input": "2025-07-29T09:17:35.727741Z",
+     "iopub.status.busy": "2025-07-29T09:17:35.727572Z",
+     "iopub.status.idle": "2025-07-29T09:17:35.864943Z",
+     "shell.execute_reply": "2025-07-29T09:17:35.864362Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:55.971132Z",
-     "iopub.status.busy": "2025-07-26T09:02:55.970964Z",
-     "iopub.status.idle": "2025-07-26T09:02:56.373713Z",
-     "shell.execute_reply": "2025-07-26T09:02:56.373162Z"
+     "iopub.execute_input": "2025-07-29T09:17:35.866609Z",
+     "iopub.status.busy": "2025-07-29T09:17:35.866443Z",
+     "iopub.status.idle": "2025-07-29T09:17:36.266005Z",
+     "shell.execute_reply": "2025-07-29T09:17:36.265443Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:56.375357Z",
-     "iopub.status.busy": "2025-07-26T09:02:56.375199Z",
-     "iopub.status.idle": "2025-07-26T09:02:56.664700Z",
-     "shell.execute_reply": "2025-07-26T09:02:56.664120Z"
+     "iopub.execute_input": "2025-07-29T09:17:36.267680Z",
+     "iopub.status.busy": "2025-07-29T09:17:36.267505Z",
+     "iopub.status.idle": "2025-07-29T09:17:36.555311Z",
+     "shell.execute_reply": "2025-07-29T09:17:36.554804Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:56.666381Z",
-     "iopub.status.busy": "2025-07-26T09:02:56.666219Z",
-     "iopub.status.idle": "2025-07-26T09:02:56.668474Z",
-     "shell.execute_reply": "2025-07-26T09:02:56.668035Z"
+     "iopub.execute_input": "2025-07-29T09:17:36.557009Z",
+     "iopub.status.busy": "2025-07-29T09:17:36.556850Z",
+     "iopub.status.idle": "2025-07-29T09:17:36.559311Z",
+     "shell.execute_reply": "2025-07-29T09:17:36.558728Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:56.669917Z",
-     "iopub.status.busy": "2025-07-26T09:02:56.669767Z",
-     "iopub.status.idle": "2025-07-26T09:02:56.672256Z",
-     "shell.execute_reply": "2025-07-26T09:02:56.671820Z"
+     "iopub.execute_input": "2025-07-29T09:17:36.560765Z",
+     "iopub.status.busy": "2025-07-29T09:17:36.560600Z",
+     "iopub.status.idle": "2025-07-29T09:17:36.563542Z",
+     "shell.execute_reply": "2025-07-29T09:17:36.562955Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:56.673628Z",
-     "iopub.status.busy": "2025-07-26T09:02:56.673457Z",
-     "iopub.status.idle": "2025-07-26T09:02:57.760101Z",
-     "shell.execute_reply": "2025-07-26T09:02:57.759583Z"
+     "iopub.execute_input": "2025-07-29T09:17:36.564960Z",
+     "iopub.status.busy": "2025-07-29T09:17:36.564794Z",
+     "iopub.status.idle": "2025-07-29T09:17:37.610347Z",
+     "shell.execute_reply": "2025-07-29T09:17:37.609864Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpSLQkmv\", R: \"/tmp/RtmpCPnRqK\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpXx0eoz\", R: \"/tmp/RtmpcV5kmN\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:57.761932Z",
-     "iopub.status.busy": "2025-07-26T09:02:57.761772Z",
-     "iopub.status.idle": "2025-07-26T09:02:58.180237Z",
-     "shell.execute_reply": "2025-07-26T09:02:58.179562Z"
+     "iopub.execute_input": "2025-07-29T09:17:37.611975Z",
+     "iopub.status.busy": "2025-07-29T09:17:37.611820Z",
+     "iopub.status.idle": "2025-07-29T09:17:38.009671Z",
+     "shell.execute_reply": "2025-07-29T09:17:38.009119Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:58.181996Z",
-     "iopub.status.busy": "2025-07-26T09:02:58.181818Z",
-     "iopub.status.idle": "2025-07-26T09:02:58.501715Z",
-     "shell.execute_reply": "2025-07-26T09:02:58.501144Z"
+     "iopub.execute_input": "2025-07-29T09:17:38.011270Z",
+     "iopub.status.busy": "2025-07-29T09:17:38.011101Z",
+     "iopub.status.idle": "2025-07-29T09:17:38.321976Z",
+     "shell.execute_reply": "2025-07-29T09:17:38.321390Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:58.503287Z",
-     "iopub.status.busy": "2025-07-26T09:02:58.503116Z",
-     "iopub.status.idle": "2025-07-26T09:02:58.510311Z",
-     "shell.execute_reply": "2025-07-26T09:02:58.509870Z"
+     "iopub.execute_input": "2025-07-29T09:17:38.323586Z",
+     "iopub.status.busy": "2025-07-29T09:17:38.323427Z",
+     "iopub.status.idle": "2025-07-29T09:17:38.330508Z",
+     "shell.execute_reply": "2025-07-29T09:17:38.329924Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-26T09:02:58.511798Z",
-     "iopub.status.busy": "2025-07-26T09:02:58.511625Z",
-     "iopub.status.idle": "2025-07-26T09:02:58.929247Z",
-     "shell.execute_reply": "2025-07-26T09:02:58.928538Z"
+     "iopub.execute_input": "2025-07-29T09:17:38.332024Z",
+     "iopub.status.busy": "2025-07-29T09:17:38.331874Z",
+     "iopub.status.idle": "2025-07-29T09:17:38.741621Z",
+     "shell.execute_reply": "2025-07-29T09:17:38.741119Z"
     }
    },
    "outputs": [
